--- a/src/sass/viewport.sass
+++ b/src/sass/viewport.sass
@@ -1,10 +1,22 @@
 @use '../sass/module'
 
+//This code handles the sidebar animation
+div#OuterWrapper
+  &.sidebarHidden
+    div#ViewportMargins, div#ViewsWrapper, div#SidebarColumn
+      transform: translateX(0)
+  &.sidebarShown
+    div#ViewportMargins, div#ViewsWrapper, div#SidebarColumn
+      transform: translateX(20vw)
+      @include module.smallScreen
+        transform: translateX(50vw)
+
 div#root
   width: 100%
   overflow-x: hidden
   div#OuterWrapper
     // Contains literally everything - master container
+    //This code handles the sidebar stuff
     div#InnerWrapper
       // Contains the sidebar and the main page content.
       // Can't transform this - messes up Sidebar fixed position
@@ -17,7 +29,6 @@ div#root
         border: $viewportBorder
         border-left: 0px solid white !important
         border-color: white !important
-        transform: translateX(0vw)
         transition: transform 0.5s ease, border 0.5s ease
         z-index: 25
         pointer-events: none
@@ -27,7 +38,6 @@ div#root
       div#ViewsWrapper // Provides the padding for the View container
         @include module.smallScreen
           padding: 0
-        transform: translateX(0vw)
         transition: transform 0.5s ease
         width: 100%
         height: 100%
